[package]
name = "wowsunpack"
description = "Utility for interacting with World of Warships game assets"
license = "MIT"
version = "0.2.2"
edition = "2021"
exclude = [".github/", "./format_templates/"]
repository = "https://github.com/landaire/wowsunpack"
documnetation = "https://docs.rs/wowsunpack/"

[lib]
name = "wowsunpack"
path = "src/lib.rs"

[[bin]]
name = "wowsunpack"
path = "src/main.rs"
required-features = ["bin"]

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
clap = { version = "4.3.0", features = ["derive"], optional = true }
flate2 = "1.0"
byteorder = "1.4"
binrw = "0.11"
eyre = { version = "0.6", optional = true }
memmap = "0.7"
thiserror = "1.0"
rayon = "1.7"
# murmur3 = "0.5"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
csv = { version = "1.2", optional = true }
glob = { version = "0.3", optional = true }
pickled = { version = "1.0", features = ["variantly"] }
nom = "7.0.0"
variantly = "0.4"
strum = "0.25"
strum_macros = "0.25"
derive_builder = "0.12"
roxmltree = "0.19"
tracing = "0.1.40"
itertools = "0.13.0"
gettext = "0.4.0"

[features]
arc = []
bin = ["eyre", "clap", "csv", "glob"]
default = ["bin"]
