[package]
name = "wowsunpack"
description = "Utility for interacting with World of Warships game assets"
license = "MIT"
version = "0.9.0"
edition = "2024"
exclude = [".github/", "./format_templates/"]
repository = "https://github.com/landaire/wowsunpack"
documentation = "https://docs.rs/wowsunpack/"

[lib]
name = "wowsunpack"
path = "src/lib.rs"

[[bin]]
name = "wowsunpack"
path = "src/main.rs"
required-features = ["bin"]

[profile.profiling]
inherits = "release"
debug = true

[dependencies]
clap = { version = "4.3.0", features = ["derive"], optional = true }
flate2 = "1.0"
byteorder = "1.4"
binrw = "0.11"
eyre = { version = "0.6", optional = true }
memmap = "0.7"
thiserror = "1.0"
rayon = { version = "1.7", optional = true }
# murmur3 = "0.5"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = { version = "1.0", optional = true }
csv = { version = "1.2", optional = true }
glob = { version = "0.3", optional = true }
pickled = { version = "2.0.0-alpha2", features = ["variantly"] }
nom = "7.0.0"
variantly = "0.4"
strum = "0.25"
strum_macros = "0.25"
derive_builder = "0.12"
roxmltree = "0.19"
tracing = "0.1.40"
itertools = "0.13.0"
gettext = "0.4.0"
convert_case = "0.8.0"
regex = { version = "1.11.3", optional = true }
indicatif = { version = "0.18.0", optional = true, features = ["rayon"] }
thread_local = { version = "1.1.9", optional = true }

[dependencies.serde_cbor]
version = "0.11"
optional = true

[features]
arc = []
json = ["dep:serde_json"]
bin = [
    "dep:eyre",
    "dep:clap",
    "dep:csv",
    "dep:glob",
    "dep:rayon",
    "dep:regex",
    "dep:indicatif",
    "dep:thread_local",
    "arc",
    "json",
]
default = ["bin"]
cbor = ["dep:serde_cbor"]

[patch.crates-io]
#pickled = { path = "../pickled" }
